--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,10 @@
 {
   "name": "batterycalculator",
-  "private":true,
+  "private": true,
   "version": "0.0.1",
   "dependencies": {
     "jquery": "~2.1.1",
-    "mithril": "*"
+    "mithril": "*",
+    "bootstrap": "~3.3.4"
   }
 }
